--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "draft-js": "^0.11.0",
     "draft-js-emoji-plugin": "^2.1.3",
     "draft-js-plugins-editor": "^3.0.0",
+    "jquery": "^3.4.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
